# LearnOpenGL.hs

./: .ghci  .gitignore  CHANGELOG.md  LICENSE  README.md  create.sh  default.nix  nixpkgs.json  opengl-exp.cabal  shell.nix  vert.glsl
GettingStarted/Camera/: Camera.cabal  Main.hs
GettingStarted/Camera-Ex1/: Camera-Ex1.cabal  Main.hs
GettingStarted/Camera-Ex2/: Camera-Ex2.cabal  Main.hs
GettingStarted/CoordinateSystems/: CoordinateSystems.cabal  Main.hs
GettingStarted/CoordinateSystems-Ex1/: CoordinateSystems-Ex1.cabal  Main.hs  frag.glsl
GettingStarted/HelloTriangle/: HelloTriangle.cabal  Main.hs  vert.glsl
GettingStarted/HelloTriangle-Ex1/: HelloTriangle-Ex1.cabal  Main.hs
GettingStarted/HelloTriangle-Ex2/: HelloTriangle-Ex2.cabal  Main.hs
GettingStarted/HelloTriangle-Ex3/: HelloTriangle-Ex3.cabal  Main.hs  frag2.glsl
GettingStarted/HelloTriangle-Idx/: HelloTriangle-Idx.cabal  Main.hs
GettingStarted/HelloWindow/: HelloWindow.cabal  Main.hs
GettingStarted/ShadersEx1/: Main.hs  ShadersEx1.cabal  vert.glsl
GettingStarted/ShadersEx2/: Main.hs  ShadersEx2.cabal  frag.glsl  vert.glsl
GettingStarted/ShadersEx3/: Main.hs  ShadersEx3.cabal  frag.glsl  vert.glsl
GettingStarted/Textures/: Textures.cabal
GettingStarted/Textures-Colored/: Main.hs  Textures-Colored.cabal  frag.glsl
GettingStarted/Textures-Ex1/: Main.hs  Textures-Ex1.cabal  frag.glsl
GettingStarted/Textures-Ex2/: Main.hs  Textures-Ex2.cabal
GettingStarted/Textures-Ex3/: Main.hs  Textures-Ex3.cabal
GettingStarted/Textures-Ex4/: Main.hs  Textures-Ex4.cabal  frag.glsl
GettingStarted/Textures-Happy/: Textures-Happy.cabal
GettingStarted/Transformations/: Main.hs  TAGS  Transformations.cabal  vert.glsl
GettingStarted/Transformations-Spin/: Main.hs  Transformations-Spin.cabal
Lighting/Colors/: Lighting.cabal  Main.hs
