cabal-version:       >=1.10
name:                Camera-Ex1
version:             0.1.0.0
license-file:        LICENSE
author:              David Johnson
maintainer:          djohnson.m@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable Camera-Ex1
  main-is:
    Main.hs
  build-depends:
      base < 5
    , gl
    , GLFW-b
    , linear
    , vector
    , bytestring
    , bindings-GLFW
    , JuicyPixels
    , JuicyPixels-extra
  default-language:
    Haskell2010
