name:                Camera-Ex2
cabal-version:       >=1.10
version:             0.1.0.0
license-file:        LICENSE
author:              David Johnson
maintainer:          code@dmj.io
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable Camera-Ex2
  main-is:
    Main.hs
  build-depends:
      base < 5
    , gl
    , GLFW-b
    , vector
    , bytestring
    , bindings-GLFW
    , JuicyPixels
    , JuicyPixels-extra
    , linear
  default-language:
    Haskell2010
