cabal-version:       >=1.10
name:                HelloWindow
version:             0.1.0.0
license-file:        LICENSE
author:              David Johnson
maintainer:          code@dmj.io
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable HelloWindow
  main-is:
    Main.hs
  build-depends:
      base < 5
    , gl
    , GLFW-b
    , vector
    , bytestring
    , bindings-GLFW
    , JuicyPixels
  default-language:
    Haskell2010
